<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearLayoutHeight"
        android:layout_weight="1"
        android:background="@color/backgroundPlayer2"
        android:orientation="vertical"
        android:rotation="180"
        tools:context="com.example.android.mtgcounter.MainActivity">

        <TextView
            style="@style/TextViews.Player"
            android:text="@string/player2Life" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonViews"
                android:onClick="removeLifeFromPlayer2"
                android:text="@string/minusButton" />

            <TextView
                android:id="@+id/Player2Life"
                style="@style/scoreTextViews.Life"
                android:text="@string/lifePoints" />

            <Button
                style="@style/ButtonViews"
                android:onClick="addLifeToPlayer2"
                android:text="@string/plusButton" />
        </LinearLayout>

        <TextView
            style="@style/TextViews.Poison"
            android:text="@string/poison" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonViews"
                android:onClick="removePoisonFromPlayer2"
                android:text="@string/minusButton" />

            <TextView
                android:id="@+id/Player2Poison"
                style="@style/scoreTextViews.Poison"
                android:text="@string/poisonCounters" />

            <Button
                style="@style/ButtonViews"
                android:onClick="addPoisonToPlayer2"
                android:text="@string/plusButton" />

        </LinearLayout>

        <Button
            style="@style/resetButtonViews"
            android:onClick="resetLife"
            android:text="@string/reset" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewHeight"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linearLayoutHeight"
        android:layout_weight="1"
        android:background="@color/backgroundPlayer1"
        android:orientation="vertical"
        tools:context="com.example.android.mtgcounter.MainActivity">

        <TextView
            style="@style/TextViews.Player"
            android:text="@string/player1Life" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonViews"
                android:onClick="removeLifeFromPlayer1"
                android:text="@string/minusButton" />

            <TextView
                android:id="@+id/Player1Life"
                style="@style/scoreTextViews.Life"
                android:text="@string/lifePoints" />

            <Button
                style="@style/ButtonViews"
                android:onClick="addLifeToPlayer1"
                android:text="@string/plusButton" />
        </LinearLayout>

        <TextView
            style="@style/TextViews.Poison"
            android:text="@string/poison" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonViews"
                android:onClick="removePoisonFromPlayer1"
                android:text="@string/minusButton" />

            <TextView
                android:id="@+id/Player1Poison"
                style="@style/scoreTextViews.Poison"
                android:text="@string/poisonCounters" />

            <Button
                style="@style/ButtonViews"
                android:onClick="addPoisonToPlayer1"
                android:text="@string/plusButton" />

        </LinearLayout>

        <Button
            style="@style/resetButtonViews"
            android:onClick="resetLife"
            android:text="@string/reset" />
    </LinearLayout>
</LinearLayout>
